[workspace]
members = [
    "autosurgeon",
    "autosurgeon-derive",
]
resolver = "2"

[workspace.package]
authors = ["Alex Good <alex@memoryandthought.me>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/automerge/autosurgeon"
license = "MIT"

[workspace.dependencies]
automerge = { git = "https://github.com/automerge/automerge.git", branch="op_set2" }
automerge-test = {git = "https://github.com/automerge/automerge.git", branch="op_set2" }

