[package]
name = "autosurgeon-derive"
description = "Procedural macros for implementing autosurgeon"
version = "0.7.1"
edition = "2021"
authors = ["Alex Good <alex@memoryandthought.me>"]
license = "MIT"
rust-version = "1.65.0"
repository = "https://github.com/alexjg/autosurgeon"

[lib]
proc_macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
smol_str = { version = "^0.1.21" }
thiserror = "1.0.37"

[dev-dependencies]
autosurgeon = { path = "../autosurgeon" }
automerge = { git = "https://github.com/automerge/automerge.git", ref="9f7efc8de69e4e50eba3b95021fda758759b4fb5" }
automerge-test = { git = "https://github.com/automerge/automerge.git", ref="9f7efc8de69e4e50eba3b95021fda758759b4fb5" }
